--- a/Calculator.Pages/GestureTrainingPage.xaml
+++ b/Calculator.Pages/GestureTrainingPage.xaml
@@ -22,7 +22,7 @@
                 </Grid.ColumnDefinitions>
                 <Button Grid.Row="1" Grid.Column="0" Content="Save" Command="{Binding SaveCommand}" />
                 <ScrollViewer Grid.Row="0" Grid.Column="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <ListView  ItemsSource="{Binding TrainingSet, Mode=TwoWay}">
+                    <ListView  ItemsSource="{Binding PathSamples, Mode=TwoWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate DataType="local:PathSample">
                                 <Grid>
