--- a/Calculator.Pages/MainPage.xaml
+++ b/Calculator.Pages/MainPage.xaml
@@ -3,17 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Calculator.Pages"
              xmlns:keypad="clr-namespace:Calculator.Keypad;assembly=Calculator.Keypad"
              xmlns:groupings="clr-namespace:Calculator.Controls.Groupings;assembly=Calculator.Controls"
              xmlns:variables="clr-namespace:Calculator.Controls.Variables;assembly=Calculator.Controls"
              xmlns:operators="clr-namespace:Calculator.Controls.Operators;assembly=Calculator.Controls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Title="Main" WindowTitle="Main">
+             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Title="Main" WindowTitle="Main" DataContext="{Binding ElementName=This}">
     <Page.Template>
         <ControlTemplate>
-            <materialDesign:DialogHost Identifier="WindowDialog" DataContext="{Binding ElementName=This}">
+            <materialDesign:DialogHost Identifier="WindowDialog">
                 <DockPanel LastChildFill="True">
                     <Menu IsMainMenu="True" DockPanel.Dock="Top">
                         <MenuItem Header="_File" >
