--- a/Calculator.Pages/GestureTrainingPage.Dictionary.xaml
+++ b/Calculator.Pages/GestureTrainingPage.Dictionary.xaml
@@ -17,11 +17,11 @@
             </Grid.RowDefinitions>
 
             <TextBlock Width="120" Height="200" Grid.Column="0" Grid.Row="0" Text="{Binding Character}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" />
-            <r:GestureRecognizer Width="100" Height="200" Grid.Column="1" Grid.Row="0" Strokes="{Binding Sample1, Mode=TwoWay}" IsTraining="true" />
-            <r:GestureRecognizer Width="100" Height="200" Grid.Column="2" Grid.Row="0" Strokes="{Binding Sample2, Mode=TwoWay}" IsTraining="true" />
-            <r:GestureRecognizer Width="100" Height="200" Grid.Column="3" Grid.Row="0" Strokes="{Binding Sample3, Mode=TwoWay}" IsTraining="true" />
-            <r:GestureRecognizer Width="100" Height="200" Grid.Column="4" Grid.Row="0" Strokes="{Binding Sample4, Mode=TwoWay}" IsTraining="true" />
-            <r:GestureRecognizer Width="100" Height="200" Grid.Column="5" Grid.Row="0" Strokes="{Binding Sample5, Mode=TwoWay}" IsTraining="true" />
+            <r:GestureRecognizer Width="100" Height="200" Grid.Column="1" Grid.Row="0" StrokesCollection="{Binding Sample1, Mode=TwoWay}" IsTraining="true" />
+            <r:GestureRecognizer Width="100" Height="200" Grid.Column="2" Grid.Row="0" StrokesCollection="{Binding Sample2, Mode=TwoWay}" IsTraining="true" />
+            <r:GestureRecognizer Width="100" Height="200" Grid.Column="3" Grid.Row="0" StrokesCollection="{Binding Sample3, Mode=TwoWay}" IsTraining="true" />
+            <r:GestureRecognizer Width="100" Height="200" Grid.Column="4" Grid.Row="0" StrokesCollection="{Binding Sample4, Mode=TwoWay}" IsTraining="true" />
+            <r:GestureRecognizer Width="100" Height="200" Grid.Column="5" Grid.Row="0" StrokesCollection="{Binding Sample5, Mode=TwoWay}" IsTraining="true" />
         </Grid>
     </DataTemplate>
 
