--- a/Calculator.Styling/Themes/Generic.xaml
+++ b/Calculator.Styling/Themes/Generic.xaml
@@ -1,17 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                    xmlns:common="clr-namespace:Calculator.Common;assembly=Calculator.Common">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Fonts.Dictionary.xaml" />
         <ResourceDictionary Source="Colors.Dictionary.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/themes/materialdesigntheme.button.xaml" />
         <ResourceDictionary>
             <ControlTemplate x:Key="FrameTemplate" TargetType="Frame">
-                <!--
-                <Button Content="&lt;" Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}" />
-                <Button Content="&gt;" Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}" />
-                -->
                 <ContentPresenter />
             </ControlTemplate>
             
@@ -40,15 +37,15 @@
                                         <DockPanel Height="Auto" Width="Auto" LastChildFill="True">
                                             <Menu IsMainMenu="True" DockPanel.Dock="Top">
                                                 <MenuItem Header="_File" >
-                                                    <MenuItem x:Name="PART_ExitAppControl" Header="Exit" InputGestureText="Ctrl+X">
+                                                    <MenuItem x:Name="PART_ExitAppControl" Header="Exit" InputGestureText="Ctrl+X" Command="{x:Static SystemCommands.CloseWindowCommand}">
                                                         <MenuItem.Icon>
                                                             <materialDesign:PackIcon Kind="ExitToApp" />
                                                         </MenuItem.Icon>
                                                     </MenuItem>
                                                 </MenuItem>
                                                 <MenuItem Header="_Window">
-                                                    <MenuItem x:Name="PART_NavigateToMainControl" Header="Calculate" />
-                                                    <MenuItem x:Name="PART_NavigateToTrainControl" Header="Train" InputGestureText="Ctrl+T">
+                                                    <MenuItem x:Name="PART_NavigateToMainControl" Header="Calculate" Command="{x:Static common:RoutedCommands.NavigateToMain}" />
+                                                    <MenuItem x:Name="PART_NavigateToTrainControl" Header="Train" InputGestureText="Ctrl+T" Command="{x:Static common:RoutedCommands.NavigateToTrain}">
                                                         <MenuItem.Icon>
                                                             <materialDesign:PackIcon Kind="Settings" />
                                                         </MenuItem.Icon>
