--- a/Calculator.GestureTraining/GestureTrainingPage.Dictionary.xaml
+++ b/Calculator.GestureTraining/GestureTrainingPage.Dictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Calculator.Pages"
-                    xmlns:r="clr-namespace:Calculator.GestureRecognizer;assembly=Calculator.GestureRecognizer">
+                    xmlns:r="clr-namespace:Calculator.GestureRecognizer;assembly=Calculator.GestureRecognizer"
+                    xmlns:local="clr-namespace:Calculator.GestureTraining">
     <DataTemplate DataType="local:PathSampleViewModel" x:Key="PathSampleTemplate">
         <Grid>
             <Grid.ColumnDefinitions>
