--- a/Calculator.GestureTraining/GestureTrainingPage.xaml
+++ b/Calculator.GestureTraining/GestureTrainingPage.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="Calculator.Pages.GestureTrainingPage"
+﻿<Page x:Class="Calculator.GestureTraining.GestureTrainingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Calculator.Pages"
-             xmlns:gestureRecognizer="clr-namespace:Calculator.GestureRecognizer;assembly=Calculator.GestureRecognizer"
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:gestureRecognizer="clr-namespace:Calculator.GestureRecognizer;assembly=Calculator.GestureRecognizer"
+      xmlns:gestureTraining="clr-namespace:Calculator.GestureTraining"
+      mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Title="Gesture Training" WindowTitle="Gesture Training">
     <Page.DataContext>
-        <local:GestureTrainingPageViewModel />
+        <gestureTraining:GestureTrainingPageViewModel />
     </Page.DataContext>
     <Page.Template>
         <ControlTemplate>
