--- a/Calculator.Pages/Themes/Generic.xaml
+++ b/Calculator.Pages/Themes/Generic.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../GestureTrainingPage.Dictionary.xaml" />
-        <ResourceDictionary Source="../ShellWindow.Dictionary.xaml" />
-        <ResourceDictionary Source="../MainPage.Dictionary.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Calculator.GestureTraining;component/Themes/Generic.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Calculator.Pages;component/ShellWindow.Dictionary.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Calculator.Main;component/Themes/Generic.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
